--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "Ram Lamichhane",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
+    "config": "^3.1.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.2"
   },
   "devDependencies": {
