--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "mern_shopping_list",
   "version": "1.0.1",
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.9.0"
+  },
   "description": "Shopping List Built with MERN stack",
   "main": "server.js",
   "scripts": {
